# waterwheel_monitor

./: .gitignore  CMakeLists.txt  README.md
include/: logger.hpp  modbus.hpp  monitor.h  requests.hpp  utils.hpp
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  logger.cpp  logger.hpp  modbus.cpp  modbus.hpp  serial.cpp  serial.hpp
lib/hardware/: CMakeLists.txt  energy_meter.cpp  energy_meter.hpp  modbus.cpp  modbus.hpp  requests.hpp  serial.cpp  serial.hpp
lib/network/: CMakeLists.txt  network.cpp  network.hpp
lib/utils/: CMakeLists.txt  config.h.in  debug.cpp  debug.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp
src/: CMakeLists.txt  config.h.in  logger.cpp  logger.hpp  main.cpp  modbus.cpp  modbus.hpp  monitor.c  monitor.cpp  utils.cpp  utils.hpp
